--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <title>Your New Jekyll Site</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
   <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="./css/syntax.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
-  <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='./bootstrap/js/bootstrap.js'></script>
 
 </head>
 <body>
