--- a/session1/index.html
+++ b/session1/index.html
@@ -6,17 +6,17 @@
   <title>session1</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
   <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="./css/syntax.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
-  <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='./bootstrap/js/bootstrap.js'></script>
 
 </head>
 <body>
@@ -30,7 +30,11 @@
     <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#1_command_line" data-toggle="tab">Intro to the command line </a></li>
+		<li class="active"><a href="#0_overview" data-toggle="tab">Course Overview </a></li>
+		
+	
+		
+		<li><a href="#1_command_line" data-toggle="tab">Intro to the command line </a></li>
 		
 	
 		
@@ -50,7 +54,43 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="1_command_line">
+	<div class="tab-pane active" id="0_overview">
+	
+
+		<h2>Course Overview</h2>
+		<h3 id='who_is_this_course_for'>Who is this course for?</h3>
+
+<ul>
+<li>You want to start a start-up and be your own technical cofounder</li>
+
+<li>You want to have your own blog and understand how it works</li>
+
+<li>You want to have the foundations to teach yourself more</li>
+</ul>
+
+<h3 id='what_will_we_learn'> What will we learn</h3>
+
+<ul>
+<li>How to inspect and learn from other sites</li>
+
+<li>How to put up a webpage</li>
+
+<li>Basic skills and tools that will be useful for any coding you do</li>
+</ul>
+
+<p>Hope you will become curious about how the internet works and will look at websites in a different way.</p>
+
+<p>It&#8217;s worth pointing out that this is <em>not</em> the easiest way to put up a website. There are many site builders/blogging platforms which will allow you to put up a website quickly and easily in a point-and-click manner (eg. <a href='http://www.weebly.com/'>weebly</a> or <a href='http://wordpress.com/'>wordpress</a>). The focus of this course is learning the basics of how and why things work and to provide the basis to build upon in future courses.</p>
+
+<h3 id='how_to_study'> How to study</h3>
+
+<p>The hardest thing about learning to program is knowing where to start and what to learn. The course aims to provide a basic overview of the technologies used, along with the tools and resources to discover more. We do not aim to cover anything in great depth or comprehensive detail.</p>
+
+<p>The lectures will be as hands-on and practical as possible. Each week there will be a number of tasks to do in between the sessions to reinforce what you have learnt. It&#8217;s up to you whether you do the tasks or not, but the more you put in the more you will get out!</p>
+	</div>
+
+	
+	<div class="tab-pane " id="1_command_line">
 	
 
 		<h2>Intro to the command line</h2>
