--- a/session3/index.html
+++ b/session3/index.html
@@ -6,17 +6,17 @@
   <title>session3</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
-  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
   <!-- syntax highlighting CSS -->
-  <link rel="stylesheet" href="/css/syntax.css">
+  <link rel="stylesheet" href="./css/syntax.css">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
-  <script type="text/javascript" src='/bootstrap/js/bootstrap.js'></script>
+  <script type="text/javascript" src='./bootstrap/js/bootstrap.js'></script>
 
 </head>
 <body>
@@ -30,7 +30,19 @@
     <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#4_twitter_bootstrap" data-toggle="tab">Twitter Bootstrap </a></li>
+		<li class="active"><a href="#1_css_recap" data-toggle="tab">CSS Recap </a></li>
+		
+	
+		
+		<li><a href="#2_selectors" data-toggle="tab">Selectors and Attributes </a></li>
+		
+	
+		
+		<li><a href="#3_separate_css_file" data-toggle="tab">Linking to an extenal stylesheet </a></li>
+		
+	
+		
+		<li><a href="#4_twitter_bootstrap" data-toggle="tab">Twitter Bootstrap </a></li>
 		
 	
 </ul>
@@ -38,7 +50,55 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="4_twitter_bootstrap">
+	<div class="tab-pane active" id="1_css_recap">
+	
+
+		<h2>CSS Recap</h2>
+		<p>CSS stands for Cascading Style Sheets. It is used to tell the web browser how to display the HTML it receives. Using CSS you can specify everything:</p>
+
+<ul>
+<li>fonts</li>
+
+<li>colours</li>
+
+<li>background images</li>
+
+<li>layout/positioning</li>
+
+<li>&#8230; and much more</li>
+</ul>
+
+<p>Last session we looked at adding CSS directly to the <code>&lt;head&gt;</code> section of the webpage. Later in this session we will see how to put the css in a different file, which is more efficient and easier to maintain.</p>
+
+<p>To remind yourself of what we did last week:</p>
+
+<ol>
+<li>Go to the folder <code>coding_course/learning_css</code></li>
+
+<li>Open <code>notes.html</code> in Sublime Text and also in Chrome</li>
+
+<li>See if you can change all the paragraph text to green</li>
+</ol>
+	</div>
+
+	
+	<div class="tab-pane " id="2_selectors">
+	
+
+		<h2>Selectors and Attributes</h2>
+		
+	</div>
+
+	
+	<div class="tab-pane " id="3_separate_css_file">
+	
+
+		<h2>Linking to an extenal stylesheet</h2>
+		
+	</div>
+
+	
+	<div class="tab-pane " id="4_twitter_bootstrap">
 	
 
 		<h2>Twitter Bootstrap</h2>
