--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Your New Jekyll Site
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for page in site.pages %}
-      <li><a href="{{relative}}{{ page.url }}">{{ page.title }}</a></li>
+      <li><a href=".{{ page.url }}">{{ page.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
