--- a/html1/index.html
+++ b/html1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Session 1</title>
+  <title>html1</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -23,7 +23,7 @@
 
   <div class="container">
     <div class="page-header">
-      <h1 class="title">Session 1</h1>
+      <h1 class="title">html1</h1>
     </div>
 
     <div class="tabbable tabs-left">
