--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: code61 - Learn to code
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>code61 - Coding Courses</h1>
+  <h2>Intro to web coding: HTML, CSS & Git</h2>
   <ul class="posts">
-    {% for page in site.pages %}
-      <li><a href=".{{ page.url }}">{{ page.title }}</a></li>
-    {% endfor %}
+      <li><a href="html1">Session 1: About the internet</a></li>
+      <li><a href="html2">Session 2: Do you git it?</a></li>
+      <li><a href="html3">Session 3: Websites with style</a></li>
   </ul>
 </div>
