Updating to a29cd64a5334046f52a886a47d74cf6b3e6d8e48.

--- a/html3/index.html
+++ b/html3/index.html
@@ -284,7 +284,7 @@ git commit -m &quot;Description of changes&quot;</code></pre>
 
 <p>If you&#8217;re using 123-reg, your should log in, select your domain from the list, and click &#8220;Manage&#8221;. You should then go to &#8220;Manage DNS&#8221;.</p>
 
-<p><img alt='123-reg DNS Settings' src='./assets/dns_settings.png' /></p>
+<p><img alt='123-reg DNS Settings' src='/assets/dns_settings.png' /></p>
 
 <p>(The @ dns entry stands for the root or bare domain.)</p>
 
