Updating to a29cd64a5334046f52a886a47d74cf6b3e6d8e48.

--- a/html1/index.html
+++ b/html1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>html1</title>
+  <title>Session 1</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -22,11 +22,12 @@
 <body>
 
   <div class="container">
-    <div class="page-header">
-      <h1 class="title">html1</h1>
-    </div>
 
-    <div class="tabbable tabs-left">
+    <div class="page-header">
+  <h1>Session 1 <small></small></h1>
+</div>
+
+<div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	
 		
@@ -261,17 +262,23 @@
 <p>Sublime Text is a text editor. When writing HTML (and code in general) it&#8217;s important to use a program that doesn&#8217;t add any formatting of its own. For example, if you wrote &#8220;hello&#8221; and saved it in Microsoft Word it would create a complicated file which would include a load of formatting information and other stuff. We want files to be saved exactly how we see them.</p>
 
 <p>There are many different possibilities for text editors. You probably already have one of Notepad or TextEdit on your computer. Sublime Text (and other editors such as NotePad++, Vim, gEdit, ..) will add <em>syntax highlighting</em> for you - they&#8217;ll colour different bits of your progamming language to make it easier to read.</p>
-<div class='exercise'>
+<div class='exercise alert alert-info'><strong>
+<p>Exercise:</p>
+</strong>
 <ol>
-<li>Go back to &#8216;index.html&#8217; in Sublime Text.</li>
+<li>
+<p>Go back to &#8216;index.html&#8217; in Sublime Text.</p>
+</li>
 
-<li>Change the text to</li>
-</ol>
-<h1>
-<p>Hello</p>
-</h1>
-<ol>
-<li>Go back to &#8216;index.html&#8217; in Chrome and press the refresh button.</li>
+<li>
+<p>Change the text to</p>
+
+<pre><code>&lt;h1&gt;Hello&lt;/h1&gt;</code></pre>
+</li>
+
+<li>
+<p>Go back to &#8216;index.html&#8217; in Chrome and press the refresh button.</p>
+</li>
 </ol>
 </div>
 <p>This is your first real html tag. It has an open and a close. It tells it to be a heading.</p>
