--- a/html3/index.html
+++ b/html3/index.html
@@ -22,11 +22,12 @@
 <body>
 
   <div class="container">
-    <div class="page-header">
-      <h1 class="title">html3</h1>
-    </div>
 
-    <div class="tabbable tabs-left">
+    <div class="page-header">
+  <h1>html3 <small></small></h1>
+</div>
+
+<div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	
 		
