--- a/html5/index.html
+++ b/html5/index.html
@@ -22,16 +22,53 @@
 <body>
 
   <div class="container">
-    <div class="page-header">
-      <h1 class="title">html5</h1>
-    </div>
 
-    <div class="tabbable tabs-left">
+    <div class="page-header">
+  <h1>html5 <small></small></h1>
+</div>
+
+<div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
+	
+		
+		<li class="active"><a href="#3_collaboration_forking" data-toggle="tab">Collaboration: Forking model </a></li>
+		
+	
+		
+		<li><a href="#4_collaboration_sharing" data-toggle="tab">Coallaboration: Sharing model </a></li>
+		
 	
 </ul>
 
 <div class="tab-content">
+
+	
+	<div class="tab-pane active" id="3_collaboration_forking">
+	
+
+		<h2>Collaboration: Forking model</h2>
+		<p>You&#8217;re now able to get someone else&#8217;s code. What about sharing your changes with them. Try doing:</p>
+
+<pre><code>git push</code></pre>
+
+<p>You&#8217;ll find that you can&#8217;t push to my repository.</p>
+
+<p>One of the options for sharing your changes with me, is for you to publish your repository too. I can then pull your changes down just as you pulled mine.</p>
+
+<p>Notice that this situation is symmetric - my repositories are equivalent to yours. This makes it a suitable model for many open source projects, where the project maintainer might change over time.</p>
+
+<p>Github makes this model easy by providing a &#8216;forking&#8217; button. Go to <a href='github.com/TomClose/landing_page'>github.com/TomClose/landing_page</a> and press the &#8216;Fork&#8217; button. You now have a copy of my repository that you can push to if you want to. If you want to send me some changes you can do this by going back to <a href='github.com/TomClose/landing_page'>github.com/TomClose/landing_page</a> and submitting a &#8216;pull request&#8217;.</p>
+	</div>
+
+	
+	<div class="tab-pane " id="4_collaboration_sharing">
+	
+
+		<h2>Coallaboration: Sharing model</h2>
+		<p>The other way or collaborating with git is the &#8216;sharing&#8217; model: one person puts the repository on github and gives other people permissions, so you can all push to the same place.</p>
+
+<p>To do this on github, go to your forked landing page repository and click on &#8216;Settings&#8217; on the right hand side. Then go to &#8216;Collaborators&#8217; and add your team members&#8217; github usernames.</p>
+	</div>
 
 </div>
 
