--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
 <body>
 
   <div class="container">
-    <div class="page-header">
-      <h1 class="title">code61 - Learn to code</h1>
-    </div>
 
     <div id="home">
   <h2>Intro to web coding: HTML, CSS & Git</h2>
@@ -32,6 +29,7 @@
       <li><a href="html1">Session 1: About the internet</a></li>
       <li><a href="html2">Session 2: Do you git it?</a></li>
       <li><a href="html3">Session 3: Websites with style</a></li>
+      <li><a href="html4">Session 4: Collaborative coding</a></li>
   </ul>
 </div>
 
