--- a/html4/index.html
+++ b/html4/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>html4</title>
+  <title>Session 4</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -22,27 +22,24 @@
 <body>
 
   <div class="container">
-    <div class="page-header">
-      <h1 class="title">html4</h1>
-    </div>
 
-    <div class="tabbable tabs-left">
+    <div class="page-header">
+  <h1>Session 4 <small>Collaborative Coding</small></h1>
+</div>
+
+<div class="tabbable tabs-left">
 <ul class="nav nav-tabs" id="myTab">
 	
 		
-		<li class="active"><a href="#2_conflicts" data-toggle="tab">Conflicts </a></li>
+		<li class="active"><a href="#1_collaboration_publishing" data-toggle="tab">Getting code from Github </a></li>
 		
 	
 		
-		<li><a href="#3_collaboration_forking" data-toggle="tab">Collaboration: Forking model </a></li>
+		<li><a href="#2_conflicts" data-toggle="tab">Conflicts </a></li>
 		
 	
 		
-		<li><a href="#4_collaboration_sharing" data-toggle="tab">Coallaboration: Sharing model </a></li>
-		
-	
-		
-		<li><a href="#collaboration_publishing" data-toggle="tab">Collaboration: Publishing model </a></li>
+		<li><a href="#3_joint_project" data-toggle="tab">Joint project </a></li>
 		
 	
 </ul>
@@ -50,19 +47,77 @@
 <div class="tab-content">
 
 	
-	<div class="tab-pane active" id="2_conflicts">
+	<div class="tab-pane active" id="1_collaboration_publishing">
 	
 
-		<h2>Conflicts</h2>
-		<p>Open <code>toms_site/index.html</code> in your code editor, and change the page heading (inside <code>&lt;h1&gt;</code>) to something of your choosing. (At the same time I&#8217;ll also make a change). When you&#8217;re done, commit your change to the local repository:</p>
+		<h2>Getting code from Github</h2>
+		<p>In previous sessions we&#8217;ve used git to pull code down from github. We&#8217;re going to start this session by doing the same again:</p>
+<div class='exercise alert alert-info'><strong>
+<p>Exercise:</p>
+</strong>
+<ol>
+<li>
+<p>Go to the command line and navigate to your <code>coding_course</code> folder</p>
+</li>
 
-<pre><code>git add .
-git commit -m &quot;Changed heading&quot;</code></pre>
+<li>
+<p>Clone the project <a href=''>https://github.com/TomClose/first_site2</a>:</p>
 
-<p>I&#8217;ll push my change up and you pull it down:</p>
+<pre><code> git clone git://github.com/TomClose/first_site2.git toms_site</code></pre>
+</li>
+</ol>
+</div>
+<p>You should now see a new file called <code>toms_site</code> in your <code>coding_course</code> folder, and be able to open <code>toms_site/index.html</code> in your browser. The clone operation has copied a local version of the repository onto your computer.</p>
+
+<p>Git will help you keep this local copy updated. If I&#8217;ve made some changes and pushed them up to github, you just need to run</p>
 
 <pre><code>git pull</code></pre>
 
+<p>to pull them down onto your laptop.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Exercise:</p>
+</strong>
+<ol>
+<li>
+<p>Wait for me to make a change and push it to gihub</p>
+</li>
+
+<li>
+<p>Pull down the changes and make sure you can see them in your browser:</p>
+
+<pre><code>git pull</code></pre>
+</li>
+</ol>
+</div>
+	</div>
+
+	
+	<div class="tab-pane " id="2_conflicts">
+	
+
+		<h2>Conflicts</h2>
+		<div class='exercise alert alert-info'><strong>
+<p>Exercise:</p>
+</strong>
+<ol>
+<li>
+<p>Open <code>toms_site/index.html</code> in your code editor, and change the page heading (inside <code>&lt;h1&gt;</code>) to something of your choosing. (At the same time I&#8217;ll also make a change). When you&#8217;re done, commit your change to the local repository:</p>
+
+<pre><code> git add .
+ git commit -m &quot;Changed heading&quot;</code></pre>
+</li>
+
+<li>
+<p>Wait while I push my own change to the <code>&lt;h1&gt;</code> element.</p>
+</li>
+
+<li>
+<p>Pull down my changes</p>
+
+<pre><code> git pull</code></pre>
+</li>
+</ol>
+</div>
 <p>You should now have a message telling you that you have a merge conflict. This is because our two changes have been made at the same time, so git is unabled to work out which is the up-to-date one to keep. If you look in your file you should see things that look like</p>
 
 <pre><code>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
@@ -75,62 +130,124 @@ git commit -m &quot;Changed heading&quot;</code></pre>
 
 <pre><code>git add .
 git commit -m &quot;Fixed conflicts&quot;</code></pre>
+<div class='exercise alert alert-info'><strong>
+<p>Exercise:</p>
+</strong>
+<ol>
+<li>
+<p>Delete the conflict markers (<code>&lt;&lt;&lt;&lt;</code>, <code>=====</code>, <code>&gt;&gt;&gt;&gt;</code>) from <code>index.html</code> (using Sublime text)</p>
+</li>
+
+<li>
+<p>Delete the version of the heading that you don&#8217;t want.</p>
+</li>
+
+<li>
+<p>On the command line:</p>
+
+<pre><code> git add .
+ git commit -m &quot;Fixed conflicts&quot;</code></pre>
+</li>
+</ol>
+</div>
 	</div>
 
 	
-	<div class="tab-pane " id="3_collaboration_forking">
+	<div class="tab-pane " id="3_joint_project">
 	
 
-		<h2>Collaboration: Forking model</h2>
-		<p>You&#8217;re now able to get someone else&#8217;s code. What about sharing your changes with them. Try doing:</p>
+		<h2>Joint project</h2>
+		<p>For this part you will need to be in groups of at least two.</p>
+<div class='exercise alert alert-info'><strong>
+<p>Exercise:</p>
+</strong>
+<ol>
+<li>
+<p>Person A should set up a new project on their laptop:</p>
 
-<pre><code>git push</code></pre>
+<ol>
+<li>Create a new folder called <code>group_project</code> in your <code>coding_course</code> folder</li>
 
-<p>You&#8217;ll find that you can&#8217;t push to my repository.</p>
+<li>Create a file in that folder called <code>index.html</code> with some simple html in it.</li>
+</ol>
+</li>
 
-<p>One of the options for sharing your changes with me, is for you to publish your repository too. I can then pull your changes down just as you pulled mine.</p>
+<li>
+<p>Person A should then set it up as a git repository</p>
 
-<p>Notice that this situation is symmetric - my repositories are equivalent to yours. This makes it a suitable model for many open source projects, where the project maintainer might change over time.</p>
-
-<p>Github makes this model easy by providing a &#8216;forking&#8217; button. Go to <a href='github.com/TomClose/landing_page'>github.com/TomClose/landing_page</a> and press the &#8216;Fork&#8217; button. You now have a copy of my repository that you can push to if you want to. If you want do send me some changes you can do this by going back to <a href='github.com/TomClose/landing_page'>github.com/TomClose/landing_page</a> and submitting a &#8216;pull request&#8217;.</p>
-	</div>
-
-	
-	<div class="tab-pane " id="4_collaboration_sharing">
-	
-
-		<h2>Coallaboration: Sharing model</h2>
-		<p>The other way or collaborating with git is the &#8216;sharing&#8217; model: one person puts the repository on github and gives other people permissions, so you can all push to the same place.</p>
-
-<p>To do this on github, go to your forked landing page repository and click on &#8216;Settings&#8217; on the right hand side. Then go to &#8216;Collaborators&#8217; and add your team members&#8217; github usernames.</p>
-	</div>
-
-	
-	<div class="tab-pane " id="collaboration_publishing">
-	
-
-		<h2>Collaboration: Publishing model</h2>
-		<p>Last time we looked at pushing your code up to github. Push up the changes you&#8217;ve just made to your site:</p>
-
-<pre><code>cd first_site
+<pre><code>cd group_project
+git init
 git add .
-git commit -m &quot;Added twitter bootstrap&quot;
-git push</code></pre>
+git commit -m &quot;Initial import&quot;</code></pre>
+</li>
 
-<p>You can think of this code as being published on github for others to read. This brings us to our first way of collaborating with others: the publishing model.</p>
+<li>
+<p>Person A creates a new repo on github and then follows the instructions to push the code up</p>
+</li>
 
-<p>In the publishing model one person pushes their work to github, and others pull it down and use it. To do this in practice you need to use the <code>git clone</code> command:</p>
+<li>
+<p>Person A then needs to add everyone else as collaborators by going to <code>Settings &gt; Collaborators</code> on the repo page</p>
+</li>
 
-<pre><code>cd coding_course
-git clone git://github.com/TomClose/first_site.git toms_site</code></pre>
+<li>
+<p>Everyone else should then clone the project:</p>
 
-<p>You should now see a new file called <code>toms_site</code> in your <code>coding_course</code> folder, and be able to open <code>toms_site/index.html</code> in your browser. The clone operation has copied a local version of the repository onto your computer.</p>
+<ol>
+<li>
+<p>Go to the repo&#8217;s github page</p>
+</li>
 
-<p>Git will help you keep this local copy updated. If I&#8217;ve made some changes and pushed them up to github, you just need to run</p>
+<li>
+<p>Copy the <code>HTTP</code> link from the box on the page</p>
+</li>
 
-<pre><code>git pull</code></pre>
+<li>
+<p>In your <code>coding_course</code> folder do</p>
 
-<p>to pull them down onto your laptop.</p>
+<pre><code>git clone paste_the_repo_link_here</code></pre>
+</li>
+</ol>
+</li>
+
+<li>
+<p>Person B should then download <a href='http://twitter.github.io/bootstrap/'>Twitter Bootstrap</a> and put it in the <code>group_project</code> folder</p>
+</li>
+
+<li>
+<p>Meanwhile Person C should add more content to the page&#8217;s html</p>
+</li>
+
+<li>
+<p>Person B should add their changes and push up to github:</p>
+
+<pre><code> git add .
+ git commit -m &quot;Added twitter bootstrap&quot;
+ git push</code></pre>
+</li>
+
+<li>
+<p>Person C should then add their changes and try and push up:</p>
+
+<pre><code> git add .
+ git commit -m &quot;Edits to index.html&quot;
+ git push</code></pre>
+</li>
+
+<li>
+<p>This will probably fail, as C won&#8217;t have B&#8217;s changes. To fix this Person C needs to pull and merge (the merge will probably happen automatically if you haven&#8217;t changed the same files). They should then push again:</p>
+
+<pre><code> git pull
+
+ # fix any merge conflicts if necessary, then add and commit the changes
+
+ git push</code></pre>
+</li>
+
+<li>
+<p>Continue to work on the site together!</p>
+</li>
+</ol>
+</div>
 	</div>
 
 </div>
