--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: code61 - Learn to code
 ---
 
 <div id="home">
-  <h1>code61 - Coding Courses</h1>
   <h2>Intro to web coding: HTML, CSS & Git</h2>
   <ul class="posts">
       <li><a href="html1">Session 1: About the internet</a></li>
       <li><a href="html2">Session 2: Do you git it?</a></li>
       <li><a href="html3">Session 3: Websites with style</a></li>
+      <li><a href="html4">Session 4: Collaborative coding</a></li>
   </ul>
 </div>
