Updating to fe6afae26ce10fa213464141252d1e72407878c7.

--- a/html4/index.html
+++ b/html4/index.html
@@ -182,7 +182,14 @@ git commit -m &quot;Initial import&quot;</code></pre>
 </li>
 
 <li>
-<p>Person A creates a new repo on github and then follows the instructions to push the code up</p>
+<p>Person A creates a new repo on github. To do this you need to log in at <a href='github.com'>github.com</a> and select &#8220;Create a new repo&#8221;. You should call the repository <code>group_project</code>.</p>
+</li>
+
+<li>
+<p>Person A should then push their code up to github following the instructions on github. You want to &#8220;Push an existing repository from the command line&#8221; - the instructions at the <strong>bottom</strong> of the page. You should end up pasting a command like</p>
+
+<pre><code>git remote add origin https://github.com/username/blah.git
+git push -u origin master</code></pre>
 </li>
 
 <li>
