--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <li><a href="html1">Session 1: About the internet</a></li>
       <li><a href="html2">Session 2: Do you git it?</a></li>
       <li><a href="html3">Session 3: Websites with style</a></li>
-      <li><a href="html4">Session 4: Collaborative coding</a></li>
+      <li><a href="html4">Session 4: Coding with friends</a></li>
+      <li><a href="html5">Session 5: Does anyone care?</a></li>
   </ul>
 </div>
 
