--- a/plan.html
+++ b/plan.html
@@ -35,7 +35,7 @@
 </tr><tr><td style='text-align: left;'>hwk 2.1</td><td style='text-align: left;'>Ruby exercises. Read about CSS &amp; and to site. Custom domain to ghp.</td>
 </tr><tr><td style='text-align: left;'>2.2.1</td><td style='text-align: left;'><strong>html4</strong>: collaboration</td>
 </tr><tr><td style='text-align: left;'>2.2.2</td><td style='text-align: left;'><strong>ruby3</strong>: iterating, each, arrays (as something you can iterate over), mention blocks</td>
-</tr><tr><td style='text-align: left;'>hwk 2.2</td><td style='text-align: left;'>Ruby exercises. Do more collaboration.</td>
+</tr><tr><td style='text-align: left;'>hwk 2.2</td><td style='text-align: left;'>Ruby exercises. Do more collaboration. Reading on web form.</td>
 </tr><tr><td style='text-align: left;'>3.1.1</td><td style='text-align: left;'><strong>lp1</strong>: setting up etc., form using github</td>
 </tr><tr><td style='text-align: left;'>3.1.2</td><td style='text-align: left;'><strong>ruby4</strong>: hashes, converting arrays to hashes, CSV?</td>
 </tr><tr><td style='text-align: left;'>hwk 3.1</td><td style='text-align: left;'>Ruby exercises. Work on landing page.</td>
